--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-art-template": "^1.0.1",
     "express-minify": "^1.0.0",
     "express-validator": "^6.14.2",
+    "generate-password": "^1.7.0",
     "helmet": "^6.0.0",
     "mongoose": "^6.7.2",
     "mongoose-paginate-v2": "^1.7.1"
