--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "express-art-template": "^1.0.1",
     "express-minify": "^1.0.0",
     "express-validator": "^6.14.2",
-    "generate-password": "^1.7.0",
     "fast-csv": "^4.3.6",
+    "generate-password": "^1.7.0",
     "helmet": "^6.0.0",
-    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.39",
     "mongoose": "^6.7.2",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1"
