--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
     "express-minify": "^1.0.0",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "fast-csv": "^4.3.6",
     "generate-password": "^1.7.0",
