--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ APP_HOST=127.0.0.1
 APP_PORT=3000
 APP_SECRET=zhj7vMOu3tMh78pMkARB
 DB_NAME=cbi_app
-
+DEFAULT_EMAIL=ejer@email.com
+DEFAULT_PASSWORD=123456
