--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-art-template": "^1.0.1",
     "express-minify": "^1.0.0",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "fast-csv": "^4.3.6",
