--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.2",
     "fast-csv": "^4.3.6",
     "generate-password": "^1.7.0",
+    "google-libphonenumber": "^3.2.32",
     "helmet": "^6.0.0",
     "memorystore": "^1.6.7",
     "moment-timezone": "^0.5.39",
